# ASRL-Robots

./: .gitignore  CMakeLists.txt  README.md  Stepper.m  deleteMe.md  getTransformation.m  getTransformation3.m  getTransformationMatrix.asv  getTransformationMatrix.m  optimizeGains.m
ArduinoInterface/: ArduinoSetup.m  ArduinoSetupIncludeLibrary.m  ClosedLoopCircleTracking.asv  ClosedLoopCircleTracking.m  ClosedLoopCircleTrackingM.asv  ClosedLoopCircleTrackingM.m  Double Trajectory.mat  NewOpenLoopCircleTracking.asv  OpenLoopCircleTracking.asv  OpenLoopCircleTracking.m  OpenLoopCircleTrackingDynamics.asv  OpenLoopCircleTrackingDynamics.m  Untitled.m  circle.asv  circle.m  eval_test.m  fourCircles.m  motor_control_test.asv  motor_control_test.m  newCircle.asv  newCircle.m  plotCoupled.asv  plotCoupled.m  quickplot.m  rbtGV.m  roboanalyzer.m  trajectoryTracking.asv  trajectoryTracking.m  trajectoryTrackingArm.asv  trajectoryTrackingArm.m  trajectoryTrackingCoupled.asv  trajectoryTrackingCoupled.m  trajectoryTrackingCoupledRyan.asv  trajectoryTrackingCoupledRyan.m  trajectoryTrackingCoupledWind.asv  trajectoryTrackingCoupledWind.m
ArduinoInterface/AR2/: AR2.asv  AR2.m  AR2Stepper.asv  AR2Stepper.m
ArduinoInterface/Matlab Motive/: assemblypath.txt
ArduinoInterface/Trajectory_Tracking_Arm/: EXPERIMENT FINAL.mat  EXPERIMENT NEW JOINT.mat  angleTracking.m  ar2_LEO_closed_loop_PID_Z.eps  plot_exp.asv  trajectoryTrackingArm.asv  trajectoryTrackingArm.m  trajectoryTrackingArm_Feedback.asv  trajectoryTrackingArm_Feedback.m  validateTrajectory.asv  (+4 more)
FinalMotorLibrary/: FinalMotorLibrary.cpp  FinalMotorLibrary.h
Matlab Motive/: NatNetPollingErrorInCircle.m  Path_Error.m  assemblypath.txt  xpath_8pi.m  ypath_8pi.m
ROME Control/: README.md  WE DID IT.mat
(+190 files in other folders)
